# Project configuration with Poetry as a build system.
# See https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "nulland"
version = "0.2.0"
description = "Note-taking REST API with Python and FastAPI."
authors = [
    "Serhii Mashentsev <serhii@mashentsev.me>",
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
